<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="10"
    tools:context=".view.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_launcher" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:hint="Usuario"
            android:maxLines="1"
            android:textSize="15sp"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="15sp"
            android:textStyle="normal" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#88898B"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_accent"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnSignUpMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_secondary"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up_me"
            android:textColor="#1769FF"
            android:textSize="10sp"
            android:textStyle="bold" />
    </RelativeLayout>
</LinearLayout>