<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".view.SignUpActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgProfile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/ic_launcher"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnEditImgProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/imgProfile"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_edit"
                android:tint="@android:color/white" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/username"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_text"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/first_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_text"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/last_name"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/txt_text"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_accent"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/txt_title"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>